Update the build process.