@@ -27,27 +27,12 @@
 		<module>dj-main</module>
 	</modules>
 	
-	<repositories>
-		<repository>
-			<id>projectlombok.org</id>
-			<url>https://projectlombok.org/edge-releases</url>
-		</repository>
-		<repository>
-			<id>spring-milestones</id>
-			<name>Spring Milestones</name>
-			<url>https://repo.spring.io/milestone</url>
-			<snapshots>
-				<enabled>false</enabled>
-			</snapshots>
-		</repository>
-	</repositories>
-	
 	<dependencies>
-		<!-- https://mvnrepository.com/artifact/org.jetbrains/annotations -->
-		<dependency>
-			<groupId>org.jetbrains</groupId>
-			<artifactId>annotations</artifactId>
-		</dependency>
+<!--		&lt;!&ndash; https://mvnrepository.com/artifact/org.jetbrains/annotations &ndash;&gt;-->
+<!--		<dependency>-->
+<!--			<groupId>org.jetbrains</groupId>-->
+<!--			<artifactId>annotations</artifactId>-->
+<!--		</dependency>-->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jdbc</artifactId>
@@ -104,6 +89,7 @@
 			<artifactId>spring-security-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+	
 	</dependencies>
 	<dependencyManagement>
 		<dependencies>
@@ -120,19 +106,20 @@
 				<scope>runtime</scope>
 				<version>8.1.0</version>
 			</dependency>
+			<!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
 			<dependency>
 				<groupId>org.projectlombok</groupId>
 				<artifactId>lombok</artifactId>
-				<version>edge-SNAPSHOT</version>
+				<version>1.18.30</version>
 				<scope>provided</scope>
-				<optional>false</optional>
+				<optional>true</optional>
 			</dependency>
 			<dependency>
 				<groupId>org.jetbrains</groupId>
 				<artifactId>annotations</artifactId>
 				<version>24.0.1</version>
 				<scope>provided</scope>
-				<optional>false</optional>
+				<optional>true</optional>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
@@ -143,27 +130,33 @@
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-compiler-plugin</artifactId>
+					<version>3.11.0</version>
 					<configuration>
+<!--						<fork>true</fork>-->
+<!--						<executable>${JavaCompiler}</executable>-->
 						<encoding>UTF-8</encoding>
+<!--						<forceJavacCompilerUse>true</forceJavacCompilerUse>-->
 						<release>${java.version}</release>
 						<source>${java.version}</source>
 						<target>${java.version}</target>
-						<annotationProcessorPaths>
-							<path>
-								<groupId>org.projectlombok</groupId>
-								<artifactId>lombok</artifactId>
-								<version>edge-SNAPSHOT</version>
-							</path>
-							<path>
-								<groupId>org.jetbrains</groupId>
-								<artifactId>annotations</artifactId>
-								<version>24.0.1</version>
-							</path>
-						</annotationProcessorPaths>
-						<compilerArgument>--enable-preview</compilerArgument>
-						<fork>true</fork>
+						<useIncrementalCompilation>false</useIncrementalCompilation>
+						<enablePreview>true</enablePreview>
 						<meminitial>256m</meminitial>
 						<maxmem>8192m</maxmem>
+						<parameters>true</parameters>
+						<verbose>true</verbose>
+<!--						<annotationProcessorPaths>-->
+<!--							<path>-->
+<!--								<groupId>org.projectlombok</groupId>-->
+<!--								<artifactId>lombok</artifactId>-->
+<!--								<version>1.18.30</version>-->
+<!--							</path>-->
+<!--							<path>-->
+<!--								<groupId>org.jetbrains</groupId>-->
+<!--								<artifactId>annotations</artifactId>-->
+<!--								<version>24.0.1</version>-->
+<!--							</path>-->
+<!--						</annotationProcessorPaths>-->
 					</configuration>
 				</plugin>
 <!--				<plugin>-->
@@ -194,31 +187,31 @@
 			</plugins>
 		</pluginManagement>
 		<plugins>
-			<plugin>
-				<groupId>org.asciidoctor</groupId>
-				<artifactId>asciidoctor-maven-plugin</artifactId>
-				<version>2.2.4</version>
-				<executions>
-					<execution>
-						<id>generate-docs</id>
-						<phase>prepare-package</phase>
-						<goals>
-							<goal>process-asciidoc</goal>
-						</goals>
-						<configuration>
-							<backend>html</backend>
-							<doctype>book</doctype>
-						</configuration>
-					</execution>
-				</executions>
-				<dependencies>
-					<dependency>
-						<groupId>org.springframework.restdocs</groupId>
-						<artifactId>spring-restdocs-asciidoctor</artifactId>
-						<version>${spring-restdocs.version}</version>
-					</dependency>
-				</dependencies>
-			</plugin>
+<!--			<plugin>-->
+<!--				<groupId>org.asciidoctor</groupId>-->
+<!--				<artifactId>asciidoctor-maven-plugin</artifactId>-->
+<!--				<version>2.2.4</version>-->
+<!--				<executions>-->
+<!--					<execution>-->
+<!--						<id>generate-docs</id>-->
+<!--						<phase>prepare-package</phase>-->
+<!--						<goals>-->
+<!--							<goal>process-asciidoc</goal>-->
+<!--						</goals>-->
+<!--						<configuration>-->
+<!--							<backend>html</backend>-->
+<!--							<doctype>book</doctype>-->
+<!--						</configuration>-->
+<!--					</execution>-->
+<!--				</executions>-->
+<!--				<dependencies>-->
+<!--					<dependency>-->
+<!--						<groupId>org.springframework.restdocs</groupId>-->
+<!--						<artifactId>spring-restdocs-asciidoctor</artifactId>-->
+<!--						<version>${spring-restdocs.version}</version>-->
+<!--					</dependency>-->
+<!--				</dependencies>-->
+<!--			</plugin>-->
 		</plugins>
 	</build>
 	
@@ -229,6 +222,10 @@
 			<build>
 				<pluginManagement>
 					<plugins>
+						<plugin>
+							<groupId>org.apache.maven.plugins</groupId>
+							<artifactId>maven-compiler-plugin</artifactId>
+						</plugin>
 <!--						<plugin>-->
 <!--							<groupId>com.github.hazendaz.maven</groupId>-->
 <!--							<artifactId>htmlcompressor-maven-plugin</artifactId>-->
@@ -257,6 +254,21 @@
 			</build>
 		</profile>
 	</profiles>
+	
+	<repositories> <!--
+		<repository>
+			<id>projectlombok.org</id>
+			<url>https://projectlombok.org/edge-releases</url>
+		</repository> -->
+		<repository>
+			<id>spring-milestones</id>
+			<name>Spring Milestones</name>
+			<url>https://repo.spring.io/milestone</url>
+			<snapshots>
+				<enabled>false</enabled>
+			</snapshots>
+		</repository>
+	</repositories>
 	
 	<developers>
 		<developer>
